# mcgill

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Caddyfile  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  benchmark.py  docker-compose.prod.yml  docker-compose.yml  main.py  prereq_visualizer_claude_code_prompt.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
backend/: __main__.py  accel.py  config.py  debug_retrieval.py  main.py
backend/api/: app.py  auth.py  deps.py
backend/api/routes/: auth.py  chat.py  courses.py  curriculum.py  faculties.py  health.py  ingestion.py  pipeline.py  planner.py  plans.py  programs.py  search.py
backend/db/: migrations.py  neo4j.py  postgres.py
backend/lib/: orchestrator.py  registry.py  sse.py  state.py  streaming.py
backend/models/: __init__.py  course.py  graph.py  plan.py
backend/services/lib/: registry.py  (+1 more)
backend/workflows/: __init__.py
data/: courses.json
docs/: STROMA_INTEGRATION.html  STROMA_INTEGRATION.md  mcgill-redesign-instructions.md  pipeline-workflow.md  rust2.md  rust3.md  rust_at_the_chokepoint.md  rust_at_the_chokepoints.md  stanchion-integration.md  stroma-integration-diagram.html  stroma-integration.md  university_pipeline_diagram.html
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
src/: lib.rs
src/mcgill/: main.py
tests/: conftest.py  test_auth.py  test_chunker.py  test_fdsc_program_retrieval.py  test_parser.py  test_pipeline_api.py  test_prerequisites.py  test_registry.py
(+90 files in other folders)
