[project]
name = "mcgill"
version = "0.3.0"
description = "McGill University Course Explorer — scrape, resolve, embed, serve"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.4",
    "anthropic>=0.86.0",
    "asyncpg>=0.30.0",
    "beautifulsoup4>=4.14.3",
    "claude-agent-sdk>=0.1.52",
    "fastapi>=0.135.2",
    "langgraph>=1.1.3",
    "langsmith>=0.7.22",
    "neo4j>=5.28.0",
    "pgvector>=0.4.2",
    "playwright>=1.58.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.9.0",
    "rapidfuzz>=3.13.0",
    "sse-starlette>=2.3.0",
    "bcrypt>=4.2.0",
    "pyjwt>=2.9.0",
    "uvicorn[standard]>=0.34.0",
    "voyageai>=0.3.7",
    "pymupdf>=1.25.0",
    "pdfplumber>=0.11.0",
    "python-multipart>=0.0.20",
]

[project.scripts]
mcgill = "backend.main:cli"

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.uv]
package = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.11.0",
    "ty>=0.0.1a0",
    "pre-commit>=4.0.0",
]
